Fixed flex layout issues

--- a/website/css/layout-debugger.css
+++ b/website/css/layout-debugger.css
@@ -12,17 +12,24 @@ body::after {
     z-index: 9999;
 }
 
-@media (max-width: 2650px) {
+@media (max-width: 2520px) {
     body::after {
-        content: '2 columns (1620px - 2650px)';
+        content: '2 columns (1666px - 2520px)';
         background: rgba(0, 119, 204, 0.8);
     }
 }
 
-@media (max-width: 1620px) {
+@media (max-width: 1666px) {
     body::after {
-        content: '1 column (768px - 1620px)';
+        content: '2 columns (1286px - 1666px)';
         background: rgba(0, 153, 51, 0.8);
+    }
+}
+
+@media (max-width: 1286px) {
+    body::after {
+        content: '1 column (768px - 1286px)';
+        background: rgba(204, 51, 51, 0.8);
     }
 }
 
